[package]
name = "rzip"
version = "0.1.0"
edition = "2024"

exclude = ["example"]

[workspace]
members = ["example", "."]

[dependencies]
async-lock = "3.4.2"
binrw = { path = "../binrw" }
crc32fast = "1.5.0"
indexmap = "2.12.1"
sha1 = "0.10.6"
sha2 = "0.10.8"
web-sys = { version = "0.3.77", features = ["console"] }
tokio = { version = "1.48.0", features = ["rt", "sync"], optional = true }
[dependencies.miniz_oxide]
path = "../miniz_oxide"
#git = "https://github.com/dounine/miniz_oxide"
#optional = true
#
#[features]
#default = []
#deflate = ["miniz_oxide"]
[features]
parallel = ["tokio"]
