[package]
name = "rzip"
version = "0.1.0"
edition = "2024"

exclude = ["example"]

[workspace]
members = ["example", "."]
[features]
default = ["use_openssl"]
parallel = ["tokio","async-scoped"]
use_openssl = ["openssl"]

[dependencies]
async-lock = "3.4.2"
binrw = { path = "../binrw" }
crc32fast = "1.5.0"
indexmap = "2.12.1"
sha1 = "0.10.6"
sha2 = "0.10.8"
web-sys = { version = "0.3.77", features = ["console"] }
tokio = { version = "1.48.0", features = ["rt", "sync"], optional = true }
async-scoped = {version = "0.9.0",features = ["use-tokio"], optional = true}
openssl = {version = "0.10.80",features = ["vendored"], optional = true}
[dependencies.miniz_oxide]
path = "../miniz_oxide"
